# bird-sound-project

./: .env.sample  .gitignore  README.md  birdscript.py  manage.py  portal_do_sol.csv  pyproject.toml
BirdSound/: admin.py  api.py  apps.py  models.py  schemas.py
BirdSound/management/commands/: seed_birds.py
BirdSound/migrations/: 0001_initial.py  0002_rename_height_bird_length.py  0003_alter_bird_description_alter_bird_family_and_more.py  0004_alter_bird_habitat.py  0005_alter_bird_conservation_status.py  0006_alter_bird_image.py
BirdSound/templates/BirdSound/: bird-add.html  bird-detail.html  bird-list.html  test.html
DjangoProject/: settings.py  urls.py
