[project]
name = "djangoproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "birdnet>=0.2.12",
    "django>=6.0.3",
    "django-bolt>=0.7.4",
    "pillow>=12.2.0",
    "psycopg>=3.3.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.9",
]
